change example content

--- a/charge/source/pages/about.html.mdx
+++ b/charge/source/pages/about.html.mdx
@@ -1,5 +1,5 @@
-import Layout from "../layout.html.jsx";
+import Layout from '../layout.html.jsx';
 
-Welcome to Charge.js deployed on ZEIT Now!
+Everything between the import and export in the source is **just markdown** using [MDX](https://mdxjs.com/)!
 
 export default ({ children }) => <Layout>{children}</Layout>;
